--- a/bootstrap.html
+++ b/bootstrap.html
@@ -181,7 +181,7 @@
             </div>
             <div class="set">
                 <h4>Votre score total est de <span id="totalscore">0</span> sur 10</h4>
-                <a class="btn1" href="start.html" >retour</a>
+                <a class="btn1" href="index.html" >retour</a>
                 <a class="btn1" href="bootstrap.html" >ressayer</a>
             </div>
         </div>
