--- a/bootstrap.html
+++ b/bootstrap.html
@@ -186,7 +186,10 @@
             </div>
         </div>
         <div class="footer">
-            <span class="btn1" id="sauter">sauter</span>
+            <span class="btn1" id="sauter" onclick="quizz()">sauter</span>
+        </div>
+        <div>
+            <p id="p" style="color: black; display: none;"></p>
         </div>
     </div>
     <script src="quiz.js"></script>
