--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
             <a href="css.html" class="btn1">Quizz css</a>
             <a href="bootstrap.html" class="btn1">Quizz JavaScript</a>
         </div>
+        <div>
+
+            <p id="p" style="color: black;"></p>
+            <p id="para" style="color: black;"></p>
+        </div>
     </div>
+    <!-- <script src="css.js"></script> -->
     <script src="quiz.js"></script>
 </body>
 </html>
