--- a/quiz.html
+++ b/quiz.html
@@ -174,11 +174,14 @@
             <div class="set">
                 <h4>Votre score total est de <span id="totalscore">0</span> sur 10</h4>
                 <a class="btn1" href="index.html" >retour</a>
-                <a class="btn1" href="css.html" >ressayer</a>
+                <a class="btn1" href="quiz.html" >ressayer</a>
             </div>
         </div>
         <div class="footer">
-            <span class="btn1" id="sauter">sauter</span>
+            <span class="btn1" id="sauter" onclick="quizz()">sauter</span>
+        </div>
+        <div>
+            <p id="p" style="color: black; display: none;"></p>
         </div>
     </div>
     <script src="quiz.js"></script>
