--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="qquiz.css">
+    <title>Quizz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            <span>Testez vos compétences avec nos Quiz </span>
+        <div class="container-header">
+            <h1>Testez vos compétences avec nos Quiz</h1>
         </div>
-       
-        <div class="footer" style="text-align: center;">
-            <a href="quiz.html" class="btn1">Quizz HTML</a>
+
+        <div class="container-footer">
+            <a href="html.html" class="btn1">Quizz html</a>
             <a href="css.html" class="btn1">Quizz css</a>
-            <a href="bootstrap.html" class="btn1">Quizz JavaScript</a>
+            <a href="javascript.html" class="btn1">Quizz JavaScript</a>
+            
         </div>
         <div>
-
-            <p id="p" style="color: black;"></p>
-            <p id="para" style="color: black;"></p>
+            <p id="p"></p>
         </div>
     </div>
-    <!-- <script src="css.js"></script> -->
-    <script src="quiz.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
