ajout du code poo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="html.html" class="btn1">Quizz html</a>
             <a href="css.html" class="btn1">Quizz css</a>
             <a href="javascript.html" class="btn1">Quizz JavaScript</a>
+            <button type="button" id="sauter" class="btn1" style="display: none;">Sauter</button>
             
         </div>
         <div>
