--- a/html.html
+++ b/html.html
@@ -184,6 +184,7 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="poo.js"></script>
 </body>
 </html>
