--- a/javascript.html
+++ b/javascript.html
@@ -196,6 +196,7 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="poo.js"></script>
 </body>
 </html>
