--- a/css.html
+++ b/css.html
@@ -189,6 +189,7 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
+    <script src="poo.js"></script>
 </body>
 </html>
