--- a/css.html
+++ b/css.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dossier-css-js/style.css">
 </head>
 <body>
     <div class="container">
@@ -189,7 +189,7 @@
         </div>
     </div>
 
-    <!-- <script src="index.js"></script> -->
-    <script src="poo.js"></script>
+    <!-- <script src="dossier-css-js/index.js"></script> -->
+    <script src="dossier-css-js/poo.js"></script>
 </body>
 </html>
